<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
    >
        <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
           
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title" />
               
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/e_title" />
                   
        </LinearLayout>
        
        <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
           
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_loc" />
               
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/e_loc" />
                   
        </LinearLayout>
           
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dateStart" />                   
      
            
        <DatePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/e_dateStart"
           />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_at" />     
      
        <TimePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/e_timeStart" />
                   
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dateEnd" />                   
        
            
        <DatePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/e_dateEnd"
                   />
      
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_at" />     
      
        <TimePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/e_timeEnd" />
                     
                     
        <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
                         
            <TextView android:layout_width="wrap_content"
                      android:layout_height="fill_parent"
                      android:text="@string/event_description"/>
                         
            <EditText android:layout_width="fill_parent"
                      android:layout_height="20dp"
                      android:id="@+id/e_description"/>
                          
        </LinearLayout>
        
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_e_button"
              
      />
                  
                       
    </LinearLayout>
</ScrollView>
