<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
    >
        <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
           
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title" />
               
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/g_title" />
                   
        </LinearLayout>
        
        
         <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
                         
            <TextView android:layout_width="wrap_content"
                      android:layout_height="fill_parent"
                      android:text="@string/event_description"/>
                         
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/g_description"/>
                          
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dateStart" />                   
      
            
        <DatePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/g_dateStart"
           />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_at" />     
      
        <TimePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_timeStart" />
                   
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_dateEnd" />                   
        
            
        <DatePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/g_dateEnd"
                   />
      
      
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_at" />     
      
        <TimePicker android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_timeEnd" />
                    
                    <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_g_button"
                    android:text="Create Goal"/>
                     
 </LinearLayout>
        
        
</ScrollView>